REM21 - style fix